--- a/src/App2.scss
+++ b/src/App2.scss
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     list-style-type: none;
-    font-family: 'IBM Plex Mono', monospace;
+    font-family: monospace;
   }
   
   body {
